# rp_course

./: .gitattributes  README.md
robotprogramming_2021_22/: .gitignore  README.md
robotprogramming_2021_22/exercises/rp_01_compilers_and_build_systems/exercise/mini_core/src/: CMakeLists.txt
robotprogramming_2021_22/exercises/rp_08_icp/solution/: CMakeLists.txt  README  eigen_icp_2d.cpp  eigen_icp_2d.h  eigen_icp_2d_test.cpp  eigen_nicp_2d.cpp  eigen_nicp_2d.h  eigen_nicp_2d_test.cpp  symm_nicp.m
robotprogramming_2021_22/exercises/rp_11_ros_setup/: aula_41_2021-11-29-12-57-48.bag  slam_2d_rpi.srrg
robotprogramming_2021_22/exercises/rp_12_navigation/: aula41.inc  aula41.world  aula41.yaml  run_navigation.webctl  slam_2d_rpi.conf
robotprogramming_2021_22/slides/: .rp_11a_ROS_sensors_marrtino.pdf.swp
robotprogramming_2021_22/source/example_depth_buffer/: depth_buffer.cpp
robotprogramming_2021_22/source/rp_02_cpp_intro/: 04_inheritance.cpp  05_subclasses_protected_private.cpp  07_late_binding.cpp  Makefile  vec_f.cpp
robotprogramming_2021_22/source/rp_03_cpp_templates/: CMakeLists.txt
robotprogramming_2021_22/source/rp_04_cpp_templates_autodiff/: ad_test.cpp
robotprogramming_2021_22/source/rp_06_eigen/: CMakeLists.txt  (+4 more)
robotprogramming_2021_22/source/srrg2_workspace/src/srrg2_hokuyo/: .gitignore  CMakeLists.txt  package.xml
robotprogramming_2021_22/source/srrg2_workspace/src/srrg2_hokuyo/config/: hokuyo.yaml
robotprogramming_2021_22/source/srrg2_workspace/src/srrg2_hokuyo/src/: hokuyo.c  hokuyo.h  hokuyo_node.cpp  hokuyo_test.c  timestamp_filter.h
robotprogramming_2021_22/source/srrg2_workspace/src/srrg2_orazio/srrg2_orazio/: CMakeLists.txt  package.xml
robotprogramming_2021_22/source/srrg2_workspace/src/srrg2_orazio/srrg2_orazio/configs/: orazio_srrg_calib_laser.conf
robotprogramming_2021_22/source/srrg2_workspace/src/srrg2_orazio/srrg2_orazio/html/: drive_params.html  gen_html.sh  imu_control.html  imu_params.html  index.html  joint0_params.html  joint1_params.html  joint2_params.html  joint3_params.html  menu.html  orazio.js  orazio_drive.html  orazio_imu.html  orazio_imu.html.base  orazio_joint0.html  orazio_joint1.html  orazio_joint2.html  orazio_joint2.html.base  orazio_joint3.html  orazio_joint3.html.base  orazio_joints_help.html  orazio_joystick.html  orazio_pwm.html  orazio_servo.html  orazio_servo.html.base  orazio_sonar.html  orazio_system.html  servo_control.html  servo_params.html  sonar_params.html  system_params.html
robotprogramming_2021_22/source/srrg2_workspace/src/srrg2_orazio/srrg2_orazio/makefiles/: Makefile.atmega2560  Makefile.dsPIC33FJ128MC802  Makefile.linux  Makefile.teensy36
robotprogramming_2021_22/source/srrg2_workspace/src/srrg2_orazio/srrg2_orazio/src/arch/atmega2560/: adc.c  counter.c  digio.c  encoder.c  pins.c  pins.h  pwm.c  sonar.c  uart.c
robotprogramming_2021_22/source/srrg2_workspace/src/srrg2_orazio/srrg2_orazio/src/arch/include/: adc.h  sonar.h
robotprogramming_2021_22/source/srrg2_workspace/src/srrg2_orazio/srrg2_orazio/src/common/: deferred_packet_handler.h  orazio_packets.h  packet_handler.c  packet_handler.h  packet_header.h
robotprogramming_2021_22/source/srrg2_workspace/src/srrg2_orazio/srrg2_orazio/src/host_test/: orazio_client_test.c  orazio_client_test_getkey.c  orazio_client_test_getkey.h  orazio_client_test_simplified.c
robotprogramming_2021_22/source/srrg2_workspace/src/srrg2_orazio/srrg2_orazio/src/orazio_firmware/: orazio.c  orazio_comm.c  orazio_drive.c  orazio_drive.h  orazio_drive_internal.c  orazio_globals.c  orazio_globals.h  orazio_hbridge_internal.c  orazio_hbridge_internal.h  orazio_imu.c  orazio_imu.h  orazio_joints.c  orazio_joints.h  orazio_param.c  orazio_param.h  orazio_pwm.c  orazio_pwm.h  orazio_sonar.c  orazio_sonar.h
robotprogramming_2021_22/source/srrg2_workspace/src/srrg2_orazio/srrg2_orazio/src/orazio_host/: linenoise.c  orazio.c  orazio_client.c  orazio_client.h  orazio_print_packet.c  orazio_shell_commands.c  orazio_shell_globals.c  orazio_shell_globals.h  orazio_ws_server.c
robotprogramming_2021_22/source/srrg2_workspace/src/srrg2_orazio/srrg2_orazio_ros/: CMakeLists.txt  package.xml
robotprogramming_2021_22/source/srrg2_workspace/src/srrg2_orazio/srrg2_orazio_ros/config/: orazio_ros.yaml
robotprogramming_2021_22/source/srrg2_workspace/src/srrg2_orazio/srrg2_orazio_ros/src/: orazio_robot_node.cpp
robotprogramming_2022_23-master/: adding_stuff_to_show_git.txt
robotprogramming_2022_23-master/exercises/rp_04_cpp_templates_in_class/: CMakeLists.txt
robotprogramming_2022_23-master/exercises/rp_04_cpp_templates_in_class/src/: CMakeCache.txt  Makefile  binary_tree_template.h  binary_tree_template_mys.cpp  cmake_install.cmake  default_compare.h  mat_f_test.cpp  mat_template_test.cpp  vec_template.h  vec_template_impl.cpp  vec_template_test.cpp
robotprogramming_2022_23-master/exercises/rp_05_cpp_stl/exercise/: CMakeLists.txt
robotprogramming_2022_23-master/exercises/rp_05_cpp_stl/exercise/src/: int_sort.cpp  point_multisort.cpp  splitter.h  splitter_test.cpp
robotprogramming_2022_23-master/exercises/rp_10_scan_matcher/solution/: CMakeLists.txt  package.xml
robotprogramming_2022_23-master/exercises/rp_10_scan_matcher/solution/src/: ros_bridge.cpp  scan_matcher_node.cpp
robotprogramming_2022_23-master/exercises/rp_10_scan_matcher/solution/src/icp/: eigen_icp_2d_test.cpp
robotprogramming_2022_23-master/my_solution/02/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
robotprogramming_2022_23-master/my_solution/02/src/: Makefile  cmake_install.cmake
robotprogramming_2022_23-master/my_solution/02/src/btree/: Makefile  btree_test  cmake_install.cmake
robotprogramming_2022_23-master/my_solution/02/src/linalg/: CMakeCache.txt  Makefile  cmake_install.cmake  mat_f_test  vec_f.cpp  vec_f_test
robotprogramming_2022_23-master/source/rp_02b_cpp_inheritance/simulator_step_by_step/: CMakeLists.txt
robotprogramming_2022_23-master/source/rp_02b_cpp_inheritance/simulator_step_by_step/src/: coso.cpp  robot.cpp  robot.h  world.cpp  world.h
(+203 files in other folders)
